updated ( after a long time ) readme.md also added register
